--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script>
+  console.log("Page loaded");
+</script><title>Document</title>
 </head>
+<h1>THIS IS ME</h1>
+<p>THIS IS YOU</p>
 <body>
     
 </body>
